--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             display: flex;
             flex-direction: column;
+            margin-top: 20px;
         }
         
         body>div {
