--- a/index.html
+++ b/index.html
@@ -23,23 +23,41 @@
 </head>
 
 <body>
-    <!-- Nav tabs -->
-    <ul class="nav nav-tabs" role="tablist">
-        <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#de" role="tab">DE</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#en" role="tab">EN</a>
-        </li>
-    </ul>
+    <div class="container">
+        <div class="row">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#de" role="tab">DE</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#en" role="tab">EN</a>
+                </li>
+            </ul>
 
-    <!-- Tab panes -->
-    <div class="tab-content">
-        <div class="tab-pane active" id="de" role="tabpanel">
-            <button play="so what_hard.mp3">Na und?</button>
-        </div>
-        <div class="tab-pane" id="en" role="tabpanel">
-            <button play="so what_hard.mp3">So What?</button>
+
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div class="tab-pane active" id="de" role="tabpanel">
+
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <button play="so what_hard.mp3">Na und?</button>
+                            </div>
+                            <div class="col-sm-4">
+                                <button play="so what_hard.mp3">Na und?</button>
+                            </div>
+                            <div class="col-sm-4">
+                                <button play="so what_hard.mp3">Na und?</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="tab-pane" id="en" role="tabpanel"> -->
+                <!--     <button play="so what_hard.mp3">So What?</button> -->
+                <!-- </div> -->
+            </div>
         </div>
     </div>
 
