--- a/index.html
+++ b/index.html
@@ -8,55 +8,43 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-    <style type="text/css">
-        /*body {
-            display: flex;
-            flex-direction: column;
-            margin-top: 20px;
-        }
-        body>div {
-            font-size: 30px;
-            display: flex;
-            justify-content: space-between;
-        }*/
-    </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="row">
-            <!-- Nav tabs -->
-            <ul class="nav nav-tabs" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#de" role="tab">DE</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#en" role="tab">EN</a>
-                </li>
-            </ul>
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#de" role="tab">DE</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#en" role="tab">EN</a>
+            </li>
+        </ul>
 
 
-            <!-- Tab panes -->
-            <div class="tab-content">
-                <div class="tab-pane active" id="de" role="tabpanel">
-
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <button play="so what_hard.mp3">Na und?</button>
-                            </div>
-                            <div class="col-sm-4">
-                                <button play="so what_hard.mp3">Na und?</button>
-                            </div>
-                            <div class="col-sm-4">
-                                <button play="so what_hard.mp3">Na und?</button>
-                            </div>
-                        </div>
+        <!-- Tab panes -->
+        <div class="tab-content">
+            <div class="tab-pane active" id="de" role="tabpanel">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <button play="so what_hard.mp3">Na und?</button>
+                    </div>
+                    <div class="col-xs-6">
+                        <button play="so what_hard.mp3">Na und?</button>
                     </div>
                 </div>
-                <!-- <div class="tab-pane" id="en" role="tabpanel"> -->
-                <!--     <button play="so what_hard.mp3">So What?</button> -->
-                <!-- </div> -->
+            </div>
+
+            <div class="tab-pane" id="en" role="tabpanel">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <button play="so what_hard.mp3">So what?</button>
+                    </div>
+                    <div class="col-xs-6">
+                        <button play="so what_hard.mp3">So what?</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
