--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             for (i = 0; i < buttons.length; i++) { // for each button
                 var button = buttons[i];
                 button.type = "button";
-                button.className += "btn btn-primary";
-                // attach audio element
+                button.className += "btn btn-primary btn-lg"
+                    // attach audio element
                 var audio = new Audio();
                 audio.src = "so what_hard.mp3";
                 audio.preload = "auto";
