--- a/index.html
+++ b/index.html
@@ -14,37 +14,29 @@
     <div class="container">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#de" role="tab">DE</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#en" role="tab">EN</a>
-            </li>
+            <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#de" role="tab">DE</a> </li>
+            <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#en" role="tab">EN</a> </li>
         </ul>
 
 
         <!-- Tab panes -->
         <div class="tab-content">
             <div class="tab-pane active" id="de" role="tabpanel">
-                <div class="row">
-                    <div class="col-xs-6">
-                        <button play="so what_hard.mp3">Na und?</button>
-                    </div>
-                    <div class="col-xs-6">
-                        <button play="so what_hard.mp3">Na und?</button>
-                    </div>
-                </div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
             </div>
 
             <div class="tab-pane" id="en" role="tabpanel">
-                <div class="row">
-                    <div class="col-xs-6">
-                        <button play="so what_hard.mp3">So what?</button>
-                    </div>
-                    <div class="col-xs-6">
-                        <button play="so what_hard.mp3">So what?</button>
-                    </div>
-                </div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
+                <div class="col-xs-6"><button play="so what_hard.mp3">So what?</button></div>
             </div>
         </div>
     </div>
