--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+    <style type="text/css">
+        .col-xs-6 {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
     <div class="container">
         <!-- Nav tabs -->
-        <ul class="nav nav-tabs" role="tablist">
+        <ul class="nav nav-pills" role="tablist">
             <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#de" role="tab">DE</a> </li>
             <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#en" role="tab">EN</a> </li>
         </ul>
@@ -56,7 +61,8 @@
                 var button = buttons[i];
                 button.type = "button";
                 button.className += "btn btn-primary btn-lg"
-                    // attach audio element
+                button.style.margin = "5px";
+                // attach audio element
                 var audio = new Audio();
                 audio.src = "so what_hard.mp3";
                 audio.preload = "auto";
